--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <!-- Custom JS -->
         <script defer src="js/main.js"></script>
-        <link rel="icon" href="/img/chesspieces/wikipedia/bK.png" />
+        <link rel="icon" href="bK.png" />
     </head>
     <body>
         <main>
